--- a/animation.html
+++ b/animation.html
@@ -26,7 +26,7 @@
                <span href="intro.html"><i class="fa fa-chevron-left" onclick="history.back(-1)" style="font-size:25px;color:#FFF"></i></span></div>
           <nav class="cd-primary-nav">
                <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="intro.html">Home</a></li>
                     <li><a href="#cd-placeholder-1">Intro</a></li>
                     <li><a href="#cd-placeholder-2">Animations projektet</a></li>
                     <li><a href="#cd-placeholder-3">Animations øvelser</a></li>
