--- a/ux.html
+++ b/ux.html
@@ -26,10 +26,10 @@
                <span href="intro.html"><i class="fa fa-chevron-left" onclick="history.back(-1)" style="font-size:25px;color:#FFF"></i></span></div>
           <nav class="cd-primary-nav">
                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="#0">About</a></li>
-                    <li><a href="#0">Portfolio</a></li>
-                    <li><a href="#0">Example</a></li>
+                    <li><a href="intro.html">Home</a></li>
+                    <li><a href="#cd-placeholder-1">Intro</a></li>
+                    <li><a href="#cd-placeholder-2">Joe &amp; The Juice</a></li>
+                    <li><a href="#cd-placeholder-3">Øvelses-case</a></li>
                </ul>
           </nav>
      </header>
@@ -48,13 +48,20 @@
                <ul>
                     <li>
                          <a href="#cd-placeholder-1">
-						<b>UX Intro</b>
+						<b>Intro</b>
 						<span></span>
 					</a>
                     </li>
                     <li>
                          <a href="#cd-placeholder-2">
 						<b>Joe &amp; The Juice</b>
+						<span></span>
+					</a>
+                    </li>
+
+                    <li>
+                         <a href="#cd-placeholder-3">
+						<b>Øvelses-case</b>
 						<span></span>
 					</a>
                     </li>
@@ -90,14 +97,19 @@
           <div class="ux-section">
                <h1>Dokumentations-site</h1>
                <br>
-               <iframe src="ux/index.html" height="800px" width="1200px"></iframe>
+               <iframe src="ux/index.html" height="800px" width="100%"></iframe>
                <br>
 
                <div class="ux-content">
                     <h1>Præsentation</h1>
-                    <iframe src="https://docs.google.com/presentation/d/1T28mOcpyUnTTYjmxZ2-G-SigSzEghVWKuzfJK8jIbuU/edit?usp=sharing" height="800" width="1200" allowfullscreen></iframe>
+                    <iframe src="https://docs.google.com/presentation/d/1T28mOcpyUnTTYjmxZ2-G-SigSzEghVWKuzfJK8jIbuU/edit?usp=sharing" height="800" width="100%" allowfullscreen></iframe>
                </div>
           </div>
+          <section id="cd-placeholder-3" class="cd-section cd-container">
+               <h1>Øvelses-case</h1>
+               <iframe src="http://www.kroghport.dk/kea/04-ux/04.01.01.%20Domaene/case/imgs/index.html" height="800" width="100%"></iframe>
+
+          </section>
 
           <footer class="parent_foot">
 
@@ -119,7 +131,6 @@ rikk626a@stud.kea.dk"><i class="fa fa-envelope" style="font-size:36px">
 </a>
                </div>
           </footer>
-
      </main>
      <script src="js/jquery-2.1.1.js"></script>
      <script src="js/main.js"></script>
