--- a/video.html
+++ b/video.html
@@ -28,8 +28,8 @@
           <nav class="cd-primary-nav">
                <ul>
                     <li><a href="intro.html">Home</a></li>
-                    <li><a href="#0">Intro</a></li>
-                    <li><a href="#0">Portfolio</a></li>
+                    <li><a href="#cd-placeholder-1">Intro</a></li>
+                    <li><a href="#cd-placeholder-2">Videoer</a></li>
                </ul>
           </nav>
      </header>
@@ -55,16 +55,11 @@
                     </li>
                     <li>
                          <a href="#cd-placeholder-2">
-						<b>Cases</b>
+						<b>Videoer</b>
 						<span></span>
 					</a>
                     </li>
-                    <li>
-                         <a href="#cd-placeholder-3">
-						<b>Example</b>
-						<span></span>
-					</a>
-                    </li>
+
                     <li>
                          <a href="index.html">
 						<b>Home</b>
@@ -77,52 +72,48 @@
      <main class="cd-main-content">
           <section id="cd-placeholder-1" class="cd-section cd-container">
                <h2>Video</h2>
-               <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem ab consequatur fugiat delectus sint in velit quo possimus, ullam aspernatur ipsa natus tenetur nulla distinctio doloremque totam. Earum enim sed dolorum, exercitationem temporibus quaerat eos, accusantium amet facilis facere eaque commodi optio quidem rem minima nisi laborum quae animi
+               <p>I vores video forløb blev vi introduceret til dramaturgi, præmis, hvordan man laver den gode historie, videointerviews, videoredigering, lyd, komposition, håndtering af kamera, hvordan man uploader til Youtube og meget meget mere!
                </p>
           </section>
           <section id="cd-placeholder-2" class="cd-section cd-container">
           </section>
 
           <div class="container">
-
-
-
                <div class="cell">
                     <iframe class="resp-video" height="400px" width="400px" src="https://www.youtube.com/embed/q5xEpkNOOVU" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                    <h2>Example</h2>
-                    <p>TEKST HER</p>
+                    <h2>Virksomheds-video til Dragør Bistro</h2>
+                    <p>Opgaven var at lave en virksomhedsvideo til vores virksomhed vi selv havde udvalgt. Vi valgte vores virksomhed ud fra hvordan deres daværende hjemmeside så ud, da vi også skulle re-designe den. Vi havde lidt problemer i forhold til teknik og location der drillede.</p>
                </div>
                <div class="cell">
                     <iframe class="resp-video" height="400px" width="400px" src="https://www.youtube.com/embed/_XvvhH3YQ3w" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                    <h2>Example</h2>
-                    <p>TEKST HER</p>
+                    <h2>How i Met Your Mother</h2>
+                    <p>Intro-opgave i første uge forløb - opgaven var at vælge en tv-serie og lave en spin-off af det, hvor vi samtidig præsenterede os selv. Vi valgte at sætte et horror-tema på serien How I Met Your Mother.</p>
                </div>
 
                <div class="cell">
                     <iframe class="resp-video" height="400px" width="400px" src="https://www.youtube.com/embed/3dlW3RYv7BY?ecver=2" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                    <h2>EN KUNDE SOM DIG ØVELSE</h2>
-                    <p>HER ER LIDT TEKST OM PROJEKTET LORELdgdfgg gdfgdgfd dfhfdhfhdhdhdhd hdhh
+                    <h2>Klippeopgave</h2>
+                    <p>En øvelse i klipning, med pre-filmede klip, der skulle sættes sammen så det gav mening.
                     </p>
                </div>
                <div class="cell">
                     <iframe class="resp-video" height="400px" width="400px" src="https://www.youtube.com/embed/w1-iRRmctek?ecver=2" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                    <h2>Example</h2>
-                    <p>TEKST HER</p>
+                    <h2>HTML-Tag</h2>
+                    <p>Lille sjov video-opgave, hvor vi trak et html-tag som vi skulle præsentere. Hele denne video er redigeret af mig, indtalt af min gruppepartner.</p>
 
                </div>
 
                <div class="cell">
                     <iframe class="resp-video" height="400px" width="400px" src="https://www.youtube.com/embed/X9B2aATnvGo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                    <h2>Example</h2>
-                    <p>TEKST HER</p>
+                    <h2>KEA-cation</h2>
+                    <p>Intro-opgave i første uge forløb - opgaven var at vælge en tv-serie og lave en spin-off af det, hvor vi samtidig præsenterede os selv. Spin-off af Californication.</p>
                </div>
 
 
                <div class="cell">
                     <iframe class="resp-video" height="400px" width="900px" src="https://player.vimeo.com/video/237039079" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen> </iframe>
-                    <h2>Example</h2>
-                    <p>TEKST HER</p>
+                    <h2>CPH:DOX</h2>
+                    <p>Viatuelt dobbeltliv, er vores CPH:DOX opgave, som vi lavede med en dansk Youtuber, der inviterede os hjem og fortalte os om hans liv, og forhindringerne og goderne ved det han laver. Link til dokumentations-site <a href="http://www.kroghport.dk/kea/03-video%28OLD%29/cph_dox/dokumentar_01.html">her</a>.</p>
                </div>
           </div>
 
