--- a/webdesign.html
+++ b/webdesign.html
@@ -42,7 +42,7 @@
      </section>
      <div class="cd-secondary-nav">
           <div id="cd-back-2">
-               <span href="intro.html"><i class="fa fa-chevron-left" style="font-size:25px;color:#FFF"></i></span>
+               <span href="intro.html"><i class="fa fa-chevron-left" onclick="history.back(-1)" style="font-size:25px;color:#FFF"></i></span>
           </div>
           <nav>
                <ul>
@@ -109,7 +109,7 @@
                <iframe src="http://www.kroghport.dk/kea/03-content/03.03-redesign/bistro/index.html" height="650" width="100%" style="background-color: white">
                </iframe>
                <p>Re-design af hjemmeside - Dette er mobil versionen, fulde desktop version kan ses <a href="http://www.kroghport.dk/kea/03-content/03.03-redesign/bistro/index.html">her.</a>
-
+                    <br>Link til dokumentations-site med 5-sekunders-test+ BERT-test og design-analyse findes <a href="http://www.kroghport.dk/kea/03-content/03.03-redesign/bistro/redesign_01.pdf">her</a>.
                </p>
           </section>
 
